--- a/index.html
+++ b/index.html
@@ -4,51 +4,59 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <!-- <link rel="stylesheet" href="canvas.css" /> -->
+    <title>Happy women day!</title>
+    <link rel="stylesheet" href="canvas.css" />
     <link rel="stylesheet" href="present.css" />
     <link rel="stylesheet" href="card.css" />
     <link rel="stylesheet" href="index.css" />
     <script src="jquery.js"></script>
-
-
 </head>
 
 <body>
+    <div class="valentine">
+        <div id="heart-group-1"></div>
+        <div id="heart-group-2"></div>
+        <div id="heart-group-3"></div>
+        <div id="heart-group-4"></div>
+        <div id="star-group-1"></div>
+        <div id="star-group-2"></div>
+        <div id="star-group-3"></div>
+        <div class="heart-fixed heart-xs"></div>
+        <div class="heart-fixed heart-sm"></div>
+        <div class="heart-fixed heart-lg"></div>
+        <div class="overlay"></div>
+    </div>
     <div class="parent">
         <canvas id="canvas"></canvas>
         <section class="above-fold">
             <div class="wrap-present">
                 <div class="present-box" id="present">
                     <div class="present">
-                        <div class="img-wrap" id="present-image"></div>
+                        <div class="img-wrap" id="present-image">
+
+                        </div>
                     </div>
                     <div class="side front"></div>
-                    <div class="side back">
-
-                    </div>
-                    <div class="side left">
-
-                    </div>
+                    <div class="side back"></div>
+                    <div class="side left"></div>
                     <div class="side right"></div>
                     <div class="side top">
                         <span class="to">
-                            <span class="name" id="nametag"> </span>
+          <span class="name" id="nametag">
+          </span>
                         </span>
                     </div>
-                    <div class="side bottom">
-
-                    </div>
+                    <div class="side bottom"></div>
                 </div>
             </div>
-            <!-- <p class="info-text">Click to Open</p> -->
+            <p class="info-text">Click to Open</p>
         </section>
 
         <div id="card">
             <h4 class="title-card">💘little coder💘</h4>
 
-            <img src="dha.png" class="honey" />
-            <!-- <img src="valentines.jpg" class="honey" /> -->
+            <img src="hot-girl.png" class="honey" />
+
             <h4 class="content-card">
                 Happy Birthday Make A Wish. Dear brother, hope you receive everything you wish for this year. You deserve the best! Thanks for being such a great brother.💘
             </h4>
